[package]
name = "argocd-sandbox"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
warp = "0.3.5"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "gitcl", "git"] }
